# radio

./: .gitignore  EVALUATION.md  docker-compose.yml  fix_monitor.py  test_crc.py  test_crc2.py
docs/: docs.md
docs/architecture/: data-flow.md  decisions.md  overview.md
docs/deployment/: docker-compose.md  local-dev.md  production.md
docs/radio-client/: hono-ssr.md  overview.md  player-component.md  styling.md  wasm-decoder.md  worklet.md
docs/radio-server/: aws-sig-v4.md  capture.md  encoder.md  monitor-ui.md  normalizer.md  overview.md  server.md
docs/reference/: alsa-ioctls.md  api-routes.md  archive-integrity.md  environment-variables.md  flac-format.md  manifest-schema.md  observability-baseline.md  sse-events.md
docs/sessions/: session-1.md  session-2.md  session-3.md  session-4.md  session-5.md  session-6.md
radio-client/: Dockerfile  decoder_test.js  deno.json  main.js  worklet_test.js
radio-client/decoder/flac/: Cargo.toml
radio-client/decoder/flac/src/: lib.rs
radio-client/static/: decoder.js  fetch_worker.js  flac.d.ts  flac.js  flac_bg.wasm  flac_bg.wasm.d.ts  player.js  worklet.js
radio-server/: Cargo.toml  Dockerfile
radio-server/crates/capture/: Cargo.toml
radio-server/crates/capture/src/: alsa_sys.rs  capture.rs  device.rs  discovery.rs  lib.rs
radio-server/crates/server/: Cargo.toml
radio-server/crates/server/src/: aws_sig_v4.rs  converter.rs  http.rs  lib.rs  main.rs  monitor.html  recorder.rs  state.rs  uploader.rs
recordings/: state.json
test_rust_alsa/: Cargo.toml
test_rust_alsa/src/: main.rs
(+4 files in other folders)
