[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
capture = { path = "../capture" }
encoder = { path = "../encoder" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
bytes = "1.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = "0.8.8"
tokio-stream = { version = "0.1.18", features = ["sync"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
time = "0.3.36"
libc = "0.2.182"
tower-http = { version = "0.6.8", features = ["cors"] }
roxmltree = "0.20.0"
urlencoding = "2.1.3"
